# just_watch_crawler

./: .gitignore  README.md  br.json  gb.json  pyproject.toml  result.json  us.json
just_watch_crawler/: country_search.py  main.py
just_watch_crawler/country_fetch/: CountryFetch.py  JustWatchCountries.py
just_watch_crawler/helper/: Formatter.py
just_watch_crawler/model/: Cast.py  Movie.py
just_watch_crawler/movie_search/: MovieSearch.py
just_watch_crawler/pages/: Menu.py  MovieSelect.py
just_watch_crawler/pages/feedbacks/: Feedback.py  MovieDidntFound.py  MovieFound.py
just_watch_crawler/providers/: DisneyPlus.py  Globoplay.py  Netflix.py
tests/: test_just_watch_crawler.py
